Added /contacts/:contactID patch route
