# src/services/contacts/routes.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from 'express'
 
 import { Contact } from '../../models/Contact'
-import { retrieveContacts, retrieveContact, createContact } from './ContactsControl'
+import { fetchContacts, fetchContact, createContact, editContact } from './ContactsControl'
 
 export default [
   {
@@ -9,7 +9,7 @@ export default [
     method: 'get',
     handler: [
       async (req: Request, res: Response) => {
-        const contacts = await retrieveContacts()
+        const contacts = await fetchContacts()
         res.status(200).send(contacts)
       }
     ]
@@ -20,7 +20,7 @@ export default [
     handler: [
       async (req: Request, res: Response) => {
         const contactID: string = req.params.contactID
-        const contact = await retrieveContact(contactID)
+        const contact = await fetchContact(contactID)
         res.status(200).send(contact)
       }
     ]
@@ -32,6 +32,18 @@ export default [
       async (req: Request, res: Response) => {
         const newContact: Contact = req.body
         const contact = await createContact(newContact)
+        res.status(200).send(contact)
+      }
+    ]
+  },
+  {
+    path: '/api/v1.0/contacts/:contactID',
+    method: 'patch',
+    handler: [
+      async (req: Request, res: Response) => {
+        const contactID: string = req.params.contactID
+        const changes: Partial<Contact> = req.body
+        const contact = await editContact(contactID, changes)
         res.status(200).send(contact)
       }
     ]
